Alterações no css e um pouco do html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head lang="pt-br">
 		<title>Oca dos Curumins</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>	
@@ -24,14 +24,14 @@
 				<div class="containerHeader__block">
 					<p class="containerHeader__blockparagrafo">O Centro Cultural Oca dos Curiumins, teve suas atividades iniciadas em abril do ano de 1997, focadas em educação. Hoje em dia trabalhamos com educação, cultura, esporte e atendimento à famílias em busca de auxílio deja na área jurídica ou não.</p>
 				</div>
+				<section class="containerImagesPrincipal">
+					<div class="containerImagesPrincipal__block">
+						<img src="assets/img1.png" class="containerImagesPrincipal__blockImage">
+						<img src="assets/img2.png" class="containerImagesPrincipal__blockImage">
+						<img src="assets/img3.png" class="containerImagesPrincipal__blockImage">
+					</div>
+				</section>
 			</header>
-			<section class="containerImagesPrincipal">
-				<div class="containerImagesPrincipal__block">
-					<img src="assets/img1.png" class="containerImagesPrincipal__blockImage">
-					<img src="assets/img2.png" class="containerImagesPrincipal__blockImage">
-					<img src="assets/img3.png" class="containerImagesPrincipal__blockImage">
-				</div>
-			</section>
 			<main>
 				<section class="containerfirstmain">
 					<div class="containerfirstmainBlocktitle">
