main finalizada por completa com responsivo

--- a/index.html
+++ b/index.html
@@ -2,86 +2,109 @@
 <html>
 	<head lang="pt-br">
 		<title>Oca dos Curumins</title>
+		<link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
-	<body>	
-		<header class="containerMenu">
-			<div class="containerMenu__block">
-				<img class="containerMenu__blockimage" src="assets/logo.png">
-				<nav class="containerMenu__blocknav">
-					<a href=""><p class="containerMenu__blockparagrafo">Sobre</p></a>
-					<a href=""><p class="containerMenu__blockparagrafo">Atividades</p></a>
-					<a href=""><p class="containerMenu__blockparagrafo">Impacto</p></a>
-					<a href=""><p class="containerMenu__blockparagrafo">Parceiros</p></a>
-					<a href=""><p class="containerMenu__blockparagrafo">Contatos</p></a>
-				</nav>
-			</div>
+	<body>
+		<header>
+			<img class="topo" src="assets/topo.svg">
+					<div class="containerMenu__block">
+						<img class="containerMenu__blockimage" src="assets/logo.png">
+						<nav class="containerMenu__blocknav">
+							<a href=""><p class="containerMenu__blocklinks">Sobre</p></a>
+							<a href=""><p class="containerMenu__blocklinks">Atividades</p></a>
+							<a href=""><p class="containerMenu__blocklinks">Impacto</p></a>
+							<a href=""><p class="containerMenu__blocklinks">Parceiros</p></a>
+							<a href=""><p class="containerMenu__blocklinks">Contatos</p></a>
+						</nav>
+					</div>
+					<div class="containerHeader__blockparagrafo">
+						<p class="containerHeader__paragrafo">O <strong>Centro Cultural Oca dos Curiumins</strong>, teve suas atividades iniciadas em abril do ano de 1997, focadas em educação. Hoje em dia trabalhamos com educação, cultura, esporte e atendimento à famílias em busca de auxílio seja na área jurídica ou não.</p>
+					</div>
 		</header>
-		<aside class="containerContent">
-			<header class="containerHeader">
-				<div class="containerHeader__block">
-					<p class="containerHeader__blockparagrafo">O Centro Cultural Oca dos Curiumins, teve suas atividades iniciadas em abril do ano de 1997, focadas em educação. Hoje em dia trabalhamos com educação, cultura, esporte e atendimento à famílias em busca de auxílio deja na área jurídica ou não.</p>
+		<section class="containerImagesPrincipal">
+			<div class="containerImagesPrincipal__block">
+				<img src="assets/img1.png" class="containerImagesPrincipal__blockImage">
+				<img src="assets/img2.png" class="containerImagesPrincipal__blockImage">
+				<img src="assets/img3.png" class="containerImagesPrincipal__blockImage">
+			</div>
+		</section>
+		<main>
+			<section class="containerfirstmain">
+				<div class="containerfirstmainBlocktitle">
+					<h1>Atividades</h1>
 				</div>
-				<section class="containerImagesPrincipal">
-					<div class="containerImagesPrincipal__block">
-						<img src="assets/img1.png" class="containerImagesPrincipal__blockImage">
-						<img src="assets/img2.png" class="containerImagesPrincipal__blockImage">
-						<img src="assets/img3.png" class="containerImagesPrincipal__blockImage">
+				<div class="containerfirstmain__block">
+					<div class="containerfirstmain__blockSubBlock">
+						<img src="assets/alfabetização.svg" alt="alfabetização" title="Alfabetização" class="containerfirstmain__blockImage">
+						<p class="containerfirstmain__blockParagraphs">Alfabetização</p>
 					</div>
-				</section>
-			</header>
-			<main>
-				<section class="containerfirstmain">
-					<div class="containerfirstmainBlocktitle">
-						<h1>Atividades</h1>
+					<div class="containerfirstmain__blockSubBlock">
+						<img src="assets/reforço.svg" alt="reforço escolar" title="Reforço Escolar" class="containerfirstmain__blockImage">
+						<p class="containerfirstmain__blockParagraphs">Reforço Escolar</p>
 					</div>
-					<div class="containerfirstmain__block">
-						<div class="containerfirstmain__blockSubBlock">
-							<img src="assets/alfabetização.svg" alt="alfabetização" title="Alfabetização" class="containerfirstmain__blockImage">
-							<p class="containerfirstmain__blockParagraphs">Alfabetização</p>
-						</div>
-						<div class="containerfirstmain__blockSubBlock">
-							<img src="assets/reforço.svg" alt="reforço escolar" title="Reforço Escolar" class="containerfirstmain__blockImage">
-							<p class="containerfirstmain__blockParagraphs">Reforço Escolar</p>
-						</div>
-						<div class="containerfirstmain__blockSubBlock">
-							<img src="assets/ingles.svg" alt="aulas de inglês" title="Aulas de Inglês" class="containerfirstmain__blockImage">
-							<p class="containerfirstmain__blockParagraphs">Aulas de Inglês</p>
-						</div>
-						<div class="containerfirstmain__blockSubBlock">
-							<img src="assets/palestras.svg" alt="palestras" title="Palestras" class="containerfirstmain__blockImage">
-							<p class="containerfirstmain__blockParagraphs">Palestras</p>
-						</div>
-						<div class="containerfirstmain__blockSubBlock">
-							<img src="assets/artesanato.svg" alt="artesanato" title="Artesanato" class="containerfirstmain__blockImage">
-							<p class="containerfirstmain__blockParagraphs">Artesanato</p>
-						</div>
-						<div class="containerfirstmain__blockSubBlock">
-							<img src="assets/teatro.svg" alt="teatro" title="Teatro" class="containerfirstmain__blockImage">
-							<p class="containerfirstmain__blockParagraphs">Teatro</p>
-						</div>
-						<div class="containerfirstmain__blockSubBlock">
-							<img src="assets/dança.svg" alt="dança" title="Dança" class="containerfirstmain__blockImage">
-							<p class="containerfirstmain__blockParagraphs">Dança</p>
-						</div>
-						<div class="containerfirstmain__blockSubBlock">
-							<img src="assets/capoeira.svg" alt="capoeira" title="Capoeira" class="containerfirstmain__blockImage">
-							<p class="containerfirstmain__blockParagraphs">Capoeira</p>
-						</div>
+					<div class="containerfirstmain__blockSubBlock">
+						<img src="assets/ingles.svg" alt="aulas de inglês" title="Aulas de Inglês" class="containerfirstmain__blockImage">
+						<p class="containerfirstmain__blockParagraphs">Aulas de Inglês</p>
 					</div>
-				</section>
-				<section class="containersecondmain">
-					<div class="containersecondmainBlock">
-						<div class="containersecondmainBlock__subBlock">
-							<h1 class="containersecondmainBlock__subBlockTitle">Impacto</h1>
-							<p class="containersecondmainBlock__subBlockParagraph">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades. Esse impacto pode ser ainda maior com a sua colaboração!</p>
-						</div>
-						<img src="assets/impacto.png" alt="turma de artesanato fazendo trabalho com feijão" title="Aulas de artesanato" class="containersecondmain__image">
+					<div class="containerfirstmain__blockSubBlock">
+						<img src="assets/palestras.svg" alt="palestras" title="Palestras" class="containerfirstmain__blockImage">
+						<p class="containerfirstmain__blockParagraphs">Palestras</p>
 					</div>
-				</section>
-			</main>
-			</aside>
+					<div class="containerfirstmain__blockSubBlock">
+						<img src="assets/artesanato.svg" alt="artesanato" title="Artesanato" class="containerfirstmain__blockImage">
+						<p class="containerfirstmain__blockParagraphs">Artesanato</p>
+					</div>
+					<div class="containerfirstmain__blockSubBlock">
+						<img src="assets/teatro.svg" alt="teatro" title="Teatro" class="containerfirstmain__blockImage">
+						<p class="containerfirstmain__blockParagraphs">Teatro</p>
+					</div>
+					<div class="containerfirstmain__blockSubBlock">
+						<img src="assets/dança.svg" alt="dança" title="Dança" class="containerfirstmain__blockImage">
+						<p class="containerfirstmain__blockParagraphs">Dança</p>
+					</div>
+					<div class="containerfirstmain__blockSubBlock">
+						<img src="assets/capoeira.svg" alt="capoeira" title="Capoeira" class="containerfirstmain__blockImage">
+						<p class="containerfirstmain__blockParagraphs">Capoeira</p>
+					</div>
+				</div>
+			</section>
+			<section class="containersecondmain">
+				<div class="containersecondmainBlock">
+					<div class="containersecondmainBlock__subBlock">
+						<h1 class="containersecondmainBlock__subBlockTitle">Impacto</h1>
+						<p class="containersecondmainBlock__subBlockParagraph">Com uma equipe composta apenas por voluntários conseguimos atender uma média de 60 pessoas em nossas atividades. Esse impacto pode ser ainda maior com a sua colaboração!</p>
+					</div>
+					<img src="assets/impacto.png" alt="turma de artesanato fazendo trabalho com feijão" title="Aulas de artesanato" class="containersecondmain__image">
+				</div>
+			</section>
+			<section class="containerParceiros">
+				<h1 class="containerParceirosTitle">Parceiros</h1>
+				<div class="containerParceiros__Block">
+					<div class="containerParceiros__Block__subBlock">
+						<img src="assets/sesc.png" alt="sesc" title="Sesc" class="containerParceiros__image">
+					</div>
+					<div class="containerParceiros__Block__subBlock">
+						<img src="assets/negra.png" alt="quintal da negra rô" title="Quintal da Negra Rô" class="containerParceiros__image">
+					</div>
+					<div class="containerParceiros__Block__subBlock">
+						<img src="assets/radio.png" alt="radio ameria rio" title="Rádio América Rio" class="containerParceiros__image">
+					</div>
+					<div class="containerParceiros__Block__subBlock">
+						<img src="assets/samba.png" alt="projeto samba favela" title="Projeto Samba Favela" class="containerParceiros__image">
+					</div>
+					<div class="containerParceiros__Block__subBlock">
+						<img src="assets/itarare.png" alt="associação de moradores do morro da itarare" title="Associação de Moradores do Morro da Itararé" class="containerParceiros__image">
+						<p>Associação de Moradores do Morro da Itararé</p>
+					</div>
+					<div class="containerParceiros__Block__subBlock">
+						<img src="assets/hashi.png" alt="hashi dourado" title="Hashi Dourado" class="containerParceiros__image">
+						<p>Hashi Dourado</p>
+					</div>
+				</div>
+		</section>
+		</main>
 	</body>
 </html>
