Footer faltando apenas o responsivo do celular

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<img class="topo" src="assets/topo.svg">
+			<!-- <img class="topo" src="assets/topo.svg">
 					<div class="containerMenu__block">
 						<img class="containerMenu__blockimage" src="assets/logo.png">
 						<nav class="containerMenu__blocknav">
@@ -22,7 +22,7 @@
 					</div>
 					<div class="containerHeader__blockparagrafo">
 						<p class="containerHeader__paragrafo">O <strong>Centro Cultural Oca dos Curiumins</strong>, teve suas atividades iniciadas em abril do ano de 1997, focadas em educação. Hoje em dia trabalhamos com educação, cultura, esporte e atendimento à famílias em busca de auxílio seja na área jurídica ou não.</p>
-					</div>
+					</div> -->
 		</header>
 		<section class="containerImagesPrincipal">
 			<div class="containerImagesPrincipal__block">
@@ -106,5 +106,28 @@
 				</div>
 		</section>
 		</main>
+		<footer class="containerfooter">
+			<section class="containerfooter__section">
+				<div class="containerfooter__block">
+					<div class="containerfooter__blockcontatos">
+						<h1 class="containerfooter__h1">CONTATO</h1>
+							<p class="paragrafo">(21)98854-1893-(21)3071-6750</p>
+							<p class="paragrafo ">tiabete2008@gmail.com</p> 
+							<p class="paragrafoo">betes_aparecida@hotmail.com</p>
+							<p class="paragrafoo">cocadoscorumiins@hotmail.com</p>
+							<p class="paragrafo endereco">estrada da itararé,480 fundos</p>
+							<p class="paragrafoo">Travesso são josé,13</p>
+							<p class="paragrafoo">avenida itaóca,2353 fundo 8(anexo)</p>
+					</div>
+					<div class="containerfooter__divimg">
+						<img class="containerfooter__divimagemcriança" src="assets/imagenfooter.png">
+					</div>
+				</div>
+			</section>
+			<div class="divimgfootervnw">
+				<p class="footerp">Desenvolvido por</p>
+				<img class="imgfootervnw" src="assets/vnw.png">
+			</div>
+		</footer>
 	</body>
 </html>
