acertei algumas configurações do responsivo na main e acertei o paragrafo do header no desktop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<!-- <img class="topo" src="assets/topo.svg">
+			<img class="topo" src="assets/topo.svg">
 					<div class="containerMenu__block">
 						<img class="containerMenu__blockimage" src="assets/logo.png">
 						<nav class="containerMenu__blocknav">
@@ -22,7 +22,7 @@
 					</div>
 					<div class="containerHeader__blockparagrafo">
 						<p class="containerHeader__paragrafo">O <strong>Centro Cultural Oca dos Curiumins</strong>, teve suas atividades iniciadas em abril do ano de 1997, focadas em educação. Hoje em dia trabalhamos com educação, cultura, esporte e atendimento à famílias em busca de auxílio seja na área jurídica ou não.</p>
-					</div> -->
+					</div>
 		</header>
 		<section class="containerImagesPrincipal">
 			<div class="containerImagesPrincipal__block">
@@ -97,11 +97,11 @@
 					</div>
 					<div class="containerParceiros__Block__subBlock">
 						<img src="assets/itarare.png" alt="associação de moradores do morro da itarare" title="Associação de Moradores do Morro da Itararé" class="containerParceiros__image">
-						<p>Associação de Moradores do Morro da Itararé</p>
+						<p class="paragraphparceiros">Associação de Moradores do Morro da Itararé</p>
 					</div>
 					<div class="containerParceiros__Block__subBlock">
 						<img src="assets/hashi.png" alt="hashi dourado" title="Hashi Dourado" class="containerParceiros__image">
-						<p>Hashi Dourado</p>
+						<p class="paragraphparceiros">Hashi Dourado</p>
 					</div>
 				</div>
 		</section>
