Fazendo section parceiros

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<header>
+		<!-- <header>
 			<img class="topo" src="assets/topo.svg">
 					<div class="containerMenu__block">
 						<img class="containerMenu__blockimage" src="assets/logo.png">
@@ -79,33 +79,23 @@
 					</div>
 					<img src="assets/impacto.png" alt="turma de artesanato fazendo trabalho com feijão" title="Aulas de artesanato" class="containersecondmain__image">
 				</div>
-			</section>
+			</section> -->
 			<section class="containerParceiros">
 				<h1 class="containerParceirosTitle">Parceiros</h1>
-				<div class="containerParceiros__Block">
-					<div class="containerParceiros__Block__subBlock">
-						<img src="assets/sesc.png" alt="sesc" title="Sesc" class="containerParceiros__image">
-					</div>
-					<div class="containerParceiros__Block__subBlock">
-						<img src="assets/negra.png" alt="quintal da negra rô" title="Quintal da Negra Rô" class="containerParceiros__image">
-					</div>
-					<div class="containerParceiros__Block__subBlock">
-						<img src="assets/radio.png" alt="radio ameria rio" title="Rádio América Rio" class="containerParceiros__image">
-					</div>
-					<div class="containerParceiros__Block__subBlock">
-						<img src="assets/samba.png" alt="projeto samba favela" title="Projeto Samba Favela" class="containerParceiros__image">
-					</div>
-					<div class="containerParceiros__Block__subBlock">
-						<img src="assets/itarare.png" alt="associação de moradores do morro da itarare" title="Associação de Moradores do Morro da Itararé" class="containerParceiros__image">
-						<p class="paragraphparceiros">Associação de Moradores do Morro da Itararé</p>
-					</div>
-					<div class="containerParceiros__Block__subBlock">
-						<img src="assets/hashi.png" alt="hashi dourado" title="Hashi Dourado" class="containerParceiros__image">
-						<p class="paragraphparceiros">Hashi Dourado</p>
-					</div>
+				<div class="containerParceiros__block">
+					<img class="" src="assets/sesc.png">
+					<img class="" src="assets/negra.png">
+					<img class="" src="assets/radio.png">
+				</div>
+				<div class="containerParceiros__block">
+					<img class="" src="assets/samba.png">
+
+					<img class="" src="assets/itarare.png">
+					<img class="" src="assets/hashi.png">
+					<p>Hashi dourado</p>	
 				</div>
 		</section>
-		</main>
+		<!-- </main>
 		<footer class="containerfooter">
 			<section class="containerfooter__section">
 				<div class="containerfooter__block">
@@ -130,4 +120,4 @@
 			</div>
 		</footer>
 	</body>
-</html>
+</html> -->
